--- a/notebooks/test_ksql.ipynb
+++ b/notebooks/test_ksql.ipynb
@@ -40,23 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "create_stream() got an unexpected keyword argument 'timestamp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb Cell 3\u001b[0m in \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m client\u001b[39m.\u001b[39;49mcreate_stream(table_name\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mdevice_stream2\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m                      columns_type\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mname varchar\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m                                    \u001b[39m'\u001b[39;49m\u001b[39mtime bigint\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m                                    \u001b[39m'\u001b[39;49m\u001b[39mvalues_x double\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m                                    \u001b[39m'\u001b[39;49m\u001b[39mvalues_y double\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m                                    \u001b[39m'\u001b[39;49m\u001b[39mvalues_z double\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m                                    \u001b[39m'\u001b[39;49m\u001b[39mmessageId bigint\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m                                    \u001b[39m'\u001b[39;49m\u001b[39msessionId varchar\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m                                    \u001b[39m'\u001b[39;49m\u001b[39mdeviceId varchar\u001b[39;49m\u001b[39m'\u001b[39;49m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m                                    ],\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m                      timestamp\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mtime\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m                      topic\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mraw-phone-stream\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/HarrisonHoffman/Desktop/DataScience/smartphone_sensor_stream2/notebooks/test_ksql.ipynb#W2sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m                      value_format\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mJSON\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: create_stream() got an unexpected keyword argument 'timestamp'"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "client.create_stream(table_name='device_stream2',\n",
+    "client.create_stream(table_name='device_stream',\n",
     "                     columns_type=['name varchar',\n",
     "                                   'time bigint',\n",
     "                                   'values_x double',\n",
@@ -153,6 +152,55 @@
     "obj = ['86a5b0e3-6e06-40e2-b226-5a72bd39b65b', 1680103085213837300, -0.017425537109375, -0.403656005859375, -0.9019927978515625]\n",
     "obj[1] = str(pd.to_datetime(obj[1]))\n",
     "obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from retry import retry\n",
+    "\n",
+    "@retry()\n",
+    "def ksql_stream(query:str):\n",
+    "\n",
+    "    recent_stream = client.query(query, use_http2=True)\n",
+    "\n",
+    "    for row in recent_stream:\n",
+    "        \n",
+    "        return row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"queryId\":\"transient_DEVICE_STREAM_3039824524561922414\",\"columnNames\":[\"DEVICEID\",\"TIME\",\"VALUES_X\",\"VALUES_Y\",\"VALUES_Z\"],\"columnTypes\":[\"STRING\",\"BIGINT\",\"DOUBLE\",\"DOUBLE\",\"DOUBLE\"]}\\n'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = '''\n",
+    "        select deviceId,\n",
+    "            time,\n",
+    "            values_x,\n",
+    "            values_y,\n",
+    "            values_z\n",
+    "        from device_stream\n",
+    "        where name = 'accelerometeruncalibrated'\n",
+    "        emit changes\n",
+    "    '''\n",
+    "\n",
+    "ksql_stream(query)"
    ]
   },
   {
